; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_InitCryptLibrary.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_InitCryptLibrary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@openssl_lock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"struct SslClientCertInfo *\00", align 1
@ssl_clientcert_index = common dso_local global i32 0, align 4
@openssl_inited = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitCryptLibrary() #0 {
  %1 = alloca [16 x i8], align 16
  %2 = call i32 (...) @NewLock()
  store i32 %2, i32* @openssl_lock, align 4
  %3 = call i32 (...) @SSL_library_init()
  %4 = call i32 (...) @OpenSSL_add_all_ciphers()
  %5 = call i32 (...) @OpenSSL_add_all_digests()
  %6 = call i32 (...) @ERR_load_crypto_strings()
  %7 = call i32 (...) @SSL_load_error_strings()
  %8 = call i32 @SSL_get_ex_new_index(i32 0, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32* null, i32* null, i32* null)
  store i32 %8, i32* @ssl_clientcert_index, align 4
  %9 = call i32 (...) @RAND_poll()
  %10 = getelementptr inbounds [16 x i8], [16 x i8]* %1, i64 0, i64 0
  %11 = call i32 @Rand(i8* %10, i32 16)
  %12 = call i32 (...) @OpenSSL_InitLock()
  store i32 1, i32* @openssl_inited, align 4
  ret void
}

declare dso_local i32 @NewLock(...) #1

declare dso_local i32 @SSL_library_init(...) #1

declare dso_local i32 @OpenSSL_add_all_ciphers(...) #1

declare dso_local i32 @OpenSSL_add_all_digests(...) #1

declare dso_local i32 @ERR_load_crypto_strings(...) #1

declare dso_local i32 @SSL_load_error_strings(...) #1

declare dso_local i32 @SSL_get_ex_new_index(i32, i8*, i32*, i32*, i32*) #1

declare dso_local i32 @RAND_poll(...) #1

declare dso_local i32 @Rand(i8*, i32) #1

declare dso_local i32 @OpenSSL_InitLock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
